ProveIt_Project/Code/proto_backend_v0.3/proveit/configs/k8s-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ht-web-dev
    app.kubernetes.io/component: ht-web-dev
    app.kubernetes.io/instance: ht-web-dev
  name: ht-web-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: ht-web-dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: ht-web-dev
        app: ht-web-dev
    spec:
      containers:
        - env:
            - name: name
              value: ht-web-dev
            - name: VITE_HT_API_KEY
              valueFrom:
                secretKeyRef:
                  name: api-key-secret
                  key: API_KEY
          image: <PATCH_ME>
          imagePullPolicy: Always
          name: ht-web-dev
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
