ProveIt_Project/Code/proto_backend_v0.3/proveit/configs/k8s-dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: ht-web-dev
    app.kubernetes.io/component: ht-web-dev
    app.kubernetes.io/instance: ht-web-dev
  name: ht-web-dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ht-web-dev
    weight: 100
  wildcardPolicy: None
